2007-04-06 Marco Costantini <costanti@science.unitn.it>

	* CSV list export:
	  - the file has extension "csv"
	  - fixed in case that authors is [] or elements are missing
	* ONIX export:
	  - removed an unnecessary .to_s
	  - removed use of CGI.escapeHTML, whch is unnecessary
	  - fixed in case that ISBN is missing
	* BibTeX export:
	  - fixed in case that authors is [] or elements are missing
	  - exported also book.publishing_year
	* HTML export:
	  - added meta "Author", "Description", "Keywords"
	* Tellico export:
	  - added info on wether the book has been read or loaned
	* Tellico import:
	  - imported notes


2007-02-24 to 2007-04-02 Marco Costantini <costanti@science.unitn.it>

	* added new Z39.50 provider "Servizio Bibliotecario Nazionale (Italy)"
	* added the FAQ
	* added hotkey "<control>O" for preferences
	* allowed manual entry of books without author (for instance 
	  9788841574195 has no author)
	* in the "Book Properties Dialog", added "cancel" button, and 
	  renamed "close" button to "save"
	* improved error messages
	* ignored empty lines when importing a list of ISBNs
	* added info in case that Alexandria can't load optional libraries
	* book_providers.rb: added debug message in case that a book is 
	  not found
	* book_properties_dialog.rb: keeps ISBN-13 instead to convert to ISBN
	* publishing_year is converted to integer when quitting, 
	  importing a Tellico library, or with some providers
	* clean.css: added foreground color, see 
	  http://www.w3.org/QA/Tips/color for the reason
	* import_library.rb smart_library.rb main_app.rb: changed 
	  variable name from MAX_STARS to MAX_RATING_STARS, and replaced 
	  some occurrences of '5' with MAX_RATING_STARS
	* library.rb: canonicalise_ean now removes dashes and spaces
	* added debug info about which provider the book has been found at
	* export_library.rb: 
	- export_library.rb: changed from "Generated" to "Generated on 
	  #{Date.today()}", when exporting to BibTex or HTML web page