@@ -1,3 +1,7 @@
+2007-04-27 Marco Costantini <costanti@science.unitn.it>
+
+        * Updated provider Worldcat
+
 2007-04-06 Marco Costantini <costanti@science.unitn.it>
 
 	* CSV list export:
